# OpenGL-Tutorial

./: CMakeLists.txt  build.sh  main.cpp
src/classes/engine/: renderManager.cpp  renderManager.h  virtualObject.cpp  virtualObject.h  windowManager.cpp  windowManager.h
src/resources/shader/: simpleFragmentShader.frag  simpleVertexShader.vert
src/shader/: loadShader.cpp
